[FIX] Arreglo en el scss de productos porque al desplegar el menú en un dispositivo móvil se creaba un scrollbar horizontal

--- a/scss/productos.scss
+++ b/scss/productos.scss
@@ -81,6 +81,7 @@ main{
 
 .video-container {
     height: 50vh;
+    width: 100%;
     position: relative;
     display: flex;
     align-items: flex-end;
@@ -91,6 +92,7 @@ main{
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
         width: 100%;
         height: 100%;
         filter: brightness(.6);
